Custom Record Page/Test/force-app/main/default/objects/Layout_Field__c/Layout_Field__c.object-meta.xml
<CustomObject>
    <description>Stores field configuration inside sections for the Dynamic Record Layout.</description>
    <label>Layout Field</label>
    <nameField>
        <displayFormat>FLD-{000000}</displayFormat>
        <label>Field ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Layout Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>