Custom Record Page/Test/force-app/main/default/objects/Layout_Field__c/fields/Layout_Section__c.field-meta.xml
<CustomField>
    <fullName>Layout_Section__c</fullName>
    <label>Layout Section</label>
    <referenceTo>Layout_Section__c</referenceTo>
    <relationshipLabel>Layout Fields</relationshipLabel>
    <relationshipName>Layout_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>